# karina-landing

./: .gitignore  Makefile
.github/workflows/: ci.yml
apps/api/: main.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 098710b47af1_add_remaining_models.py  0f95423c7d44_add_booking_status.py
apps/api/core/: config.py  db.py  security.py
apps/api/models/: __init__.py  catalog.py  document.py  event.py  karaoke.py  user.py
apps/api/routers/: auth.py  bookings.py  catalog.py  contract_templates.py  documents.py  karaoke.py  leads.py  payments.py  reports.py  social.py
apps/api/scripts/: seed.py
apps/api/static/: style.css
apps/api/templates/: base.html
apps/web/: package-lock.json  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/(pages)/: layout.tsx  page.tsx
apps/web/src/app/(pages)/admin/: page.tsx
apps/web/src/app/(pages)/contacto/: page.tsx
apps/web/src/app/admin/: page.tsx
apps/web/src/app/contacto/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/register/: page.tsx
apps/web/src/components/: Navbar.tsx  withAuth.tsx
apps/web/src/context/: AuthContext.tsx
apps/web/src/lib/: authService.ts
apps/web/src/types/: index.ts
backend/: Dockerfile  main.py
backend/alembic/versions/: 6ee88b7d1596_user_models.py
backend/models/: document.py  inventory.py
backend/routers/: frontend.py  inventory.py  settings.py
backend/templates/: agenda.html  home.html
docs/: README.md
infra/: .env.example  docker-compose.yml
static/gallery/: .gitkeep
(+6 files in other folders)
