[tool.poetry]
name = "karina-api"
version = "0.1.0"
description = "API for Karina Ocampo Event Management System"
authors = ["Gemini <gemini@google.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.5.3"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.7"
mercadopago = "^2.1.7"
boto3 = "^1.34.23"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
ruff = "^0.1.14"
black = "^23.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
